<resources>
    <string name="app_name">BodyDiary</string>
    <string name="app_header">Дневник\nВеса</string>
    <string name="home_welcome">Добро Пожаловать!</string>
    <string name="home_description">Здесь вы сможете отслеживать параметры своего тела и смотреть на динамику изменений.</string>
    <string name="home_additional_info">Еще есть раздел с полезной информацией!</string>
    <string name="login_enter">Вход</string>
    <string name="login_email_hint">Ваша эл.почта:</string>
    <string name="login_password_hint">Ваш пароль:</string>
    <string name="login_enter_button">Войти</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_name_hint">Ваше Имя:</string>
    <string name="profile_title">Профиль:</string>
    <string name="profile_image_hint">Ваше фото:</string>
    <string name="change_button_text">Изменить</string>
    <string name="exit">Выйти</string>
    <string name="usefulinfo_title">Полезная информация:</string>
    <string name="usefullinfo_text">Отслеживание параметров человека, таких как рост, вес и объемы тела, играет важную роль в поддержании здоровья и благополучия. Регулярное измерение этих показателей помогает не только контролировать изменения в теле, но и выявлять потенциальные проблемы на ранних стадиях.</string>
    <string name="contacts_title">Контакты</string>
    <string name="contacts_text">По всем вопросам обращайтесь на электронную почту:\nlenochka@best.com</string>
</resources>